<resources>
    <string name="app_name">Sales</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <integer name="weight_60">60</integer>
    <integer name="weight_sum">100</integer>
    <integer name="weight_50">50</integer>
    <integer name="weight_80">80</integer>
    <integer name="weight_20">20</integer>

    <string name="add_customer_activity_title_adding_customer">Adding customer</string>
    <string name="add_customer_activity_title_viewing_customer">Viewing customer</string>

    <string name="select_customer_activity_title">Select customer</string>

    <string name="creating_customer_scrollview_layout">Creating customer scrollview layout</string>
    <string name="hint_customer_first_name">First name</string>
    <string name="hint_customer_last_name">Last name</string>
    <string name="hint_customer_phone_number">Phone number</string>
    <string name="hint_customer_email">Email</string>
    <string name="hint_user_id">User ID</string>
    <string name="get_custom_token">Get Token</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="send_link">Send Link</string>
    <string name="sign_out">Sign Out</string>
    <string name="verify_email">Verify</string>
    <string name="loading">Loading…</string>
    <string name="custom_token">Custom Token</string>
    <string name="signed_in">Signed In</string>
    <string name="signed_out">Signed Out</string>
    <string name="token_null">Token: null</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="start_phone_auth">Start</string>
    <string name="verify_phone_auth">Verify</string>
    <string name="resend_phone_auth">Resend</string>
    <string name="hint_phone_number">Phone Number</string>
    <string name="hint_verification_code">Verification Code</string>
    <string name="status_code_sent">Code Sent</string>
    <string name="status_verification_failed">Verification failed</string>
    <string name="status_verification_succeeded">Verification succeeded</string>
    <string name="status_sign_in_failed">Sign-in failed</string>
    <string name="instant_validation">(instant validation)</string>

    <string name="phone_title_text">Phone Number</string>
    <string name="firebase_status_fmt">Firebase UID: %s</string>

</resources>